Feat: Adding dni to User and new methods and endpoints to get it by id and dni. Need for use on reservation to validate it is possible
