# src/main/resources/api-first/openapi.yaml
@@ -46,6 +46,48 @@ paths:
           $ref: '#/components/responses/Forbidden'
         '404':
           $ref: '#/components/responses/NotFound'
+  "/search_user_dni/{dni}":
+    get:
+      operationId: getUserByDni
+      summary: Get a user by his dni.
+      tags:
+        - User
+      parameters:
+        - $ref: '#/components/parameters/UserDni'
+      responses:
+        '200':
+          description: The user data.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '403':
+          $ref: '#/components/responses/Forbidden'
+        '404':
+          $ref: '#/components/responses/NotFound'
+  "/search_user_id/{id}":
+    get:
+      operationId: getUserById
+      summary: Get a user by id.
+      tags:
+        - User
+      parameters:
+        - $ref: '#/components/parameters/UserId'
+      responses:
+        '200':
+          description: The user data.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '403':
+          $ref: '#/components/responses/Forbidden'
+        '404':
+          $ref: '#/components/responses/NotFound'
   "/delete_user/{id}":
     delete:
       operationId: deleteUser
@@ -275,7 +317,6 @@ components:
     ReservationStatus:
       type: string
       enum:
-        - PENDING
         - ACTIVE
         - COMPLETED
         - CANCELLED
@@ -309,6 +350,8 @@ components:
         id:
           type: integer
         username:
+          type: string
+        dni:
           type: string
         email:
           type: string
@@ -391,6 +434,16 @@ components:
         minimum: 1
         maximum: 100
         default: 10
+    UserDni:
+        name: dni
+        in: path
+        description: The dni of the user.
+        required: true
+        schema:
+            type: string
+            minLength: 8
+            maxLength: 12
+        example: 12345678-9
     UserId:
       name: id
       in: path
